model/syntax.ebnf
* NaoText Syntax Definition *

Program ::= [Imports] Robots Collaborations
Imports ::= "import {" ImportItems "}"
ImportItems ::= String ";" {String ";"}
Robots ::= Robot ";" {Robot ";"}
Robot ::= CPS Name "IP" Ip "PORT" Port
CPS ::= ("Nao" | "Mindstorm")
Name ::= String
RoleName ::= String
Ip ::= 1{Digit}3 "." 1{Digit}3 "." 1{Digit}3 "." 1{Digit}3
Digit ::= "0" | ... | "9"
Port ::= Digit {Digit}
Collaborations ::= Collaboration {Collaboration}
Collaboration ::= "context" Name
					"{"
						{ [VariableDecls | Collaboration | Roles | Constraints | ActivationRules ] }
					"}"
Variable ::= String
VariableDecls ::= VariableDecl ";" {VariableDecl ";"}
VariableDecl ::= EVariableDecl | IVariableDecl
EVariableDecl ::= ["var" | "val"] Variable ":" Type
IVariableDecl ::= EVariableDecl "=" Value
Type ::= String
Value ::= String
Constraints ::= Constraint ";" {Contraint ";"}
Constraint ::= RoleName ["equals" | "implies" | "prohibits"] RoleName
ActivationRules ::= ActivationRule {ActivationRule}
ActivationRule ::= "activate for"
					"{"
						RoleName Variable ";" {RoleName Variable ";"}
					"} when {" JavaCode "}"
					"with bindings"
					"{"
						Variable "->" RoleName ";" {Variable "->" RoleName ";"}
					"}"
Roles ::= Role {Role}
Role ::= "role" Name "playedBy" Name "{" Behavior {VariableDecls|Methods} "}"
JavaCode ::= String
Methods ::= Method {Method}
Method ::= JavaCode
Behavior ::= "behavior {" JavaCode "}"
